# simustratum-backend

./: .env.example  .gitignore  BACKEND.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0d6b8997b35e_create_users_table.py  3fe59fcdf407_add_full_name_to_users.py  63e992aaea9d_add_session_lifecycle_fields_and_.py  9522d151504e_create_password_reset_tokens_table.py  a1b2c3d4e5f6_add_query_performance_indexes.py  a29a4d123d0e_create_documents_table.py  a80ba7e1eba8_create_sessions_table.py  c8d7e6f5a4b3_add_billing_fields_to_users.py  e3c2b0ca1d13_add_audio_storage_key_to_transcript_.py  eae9fc21b0b5_create_token_blacklist_table.py
api/: database.py  response.py
api/v1/dependencies/: auth.py
api/v1/models/: user.py  (+6 more)
docs/: simustratum_architecture.excalidraw
prompts/: english_proficiency.md  oral_examination.md  presentation.md  project_defense.md  seminar_defense.md  tutorial_practice.md
scripts/: migrate.py
tests/: conftest.py  test_document_service.py  test_llm_fallback.py  test_llm_service.py  test_prompt_templates.py  utils.py
tests/auth/: test_change_password.py  test_forgot_password.py  test_google_auth.py  test_login.py  test_logout.py  test_refresh.py  test_register.py  test_reset_password.py  test_update_user_detail.py
tests/billing/: test_billing.py
tests/documents/: test_upload_document.py
tests/session_stream/: test_session_stream.py
tests/sessions/: test_audio_upload_url.py  test_create_session.py  test_delete_session.py  test_end_session.py  test_list_sessions.py  test_replay.py
(+34 files in other folders)
