[project]
name = "simustratum-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "email-validator>=2.2.0",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "fastapi-mail>=1.6.2",
    "google-cloud-storage>=3.10.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.44.0",
    "pillow>=12.2.0",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.30.0",
    "psycopg2>=2.9.12",
    "anthropic>=0.40.0",
    "google-genai>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
